--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+Flask==2.1.0
+mysql-connector-python==8.0.27
+Flask-Cors==3.0.10
+Flask-SocketIO==5.1.1
