--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ pytestdebug.log
 # Django stuff:
 *.log
 local_settings.py
+settings.py
 db.sqlite3
 db.sqlite3-journal
 
@@ -88,8 +89,6 @@ target/
 profile_default/
 ipython_config.py
 
-# pyenv
-.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
